# source_downgrading

./: .gitignore  AGENTS.md  CITATION.cff  CLAIMS_MATRIX.md  LICENSE  PUBLICATION_CHECKLIST.md  README.md  REPRODUCIBILITY.md  pyproject.toml
benchmarks/: __init__.py  coupling_dataset.py  laundering_baselines.py  laundering_dataset.py  run_coupling_benchmark.py  run_coupling_llm_benchmark.py  run_laundering_benchmark.py  run_perf.py  run_poisonedrag.py  run_product_comparison.py  run_source_boundary_benchmark.py  source_boundary_dataset.py
benchmarks/data/: coupling_dataset.jsonl  laundering_dataset.jsonl  source_boundary_dataset.jsonl
benchmarks/poisonedrag/: README.md  __init__.py  _lib_integration_live.py  _lib_integration_smoke.py  _offline_smoke.py  arms.py  convert_real.py  dataset.py  grading.py  runner.py  source_classifier.py
benchmarks/product_comparison/: __init__.py  _offline_smoke.py  _offline_smoke_v2.py  adversarial_reload.py  adversarial_reload_v2.py  dataset.py  grading.py  judge.py  llm_client.py  session.py
docs/: REPOSITORY_INVENTORY.md  TASK_COMPLETION_AUDIT.md  paper-revisions.md  pre_consolidation_file_manifest.csv  research-conclusions.md  source-downgrading-review.md  trace-memory-library.md
docs/architecture/: ROADMAP.md  ROADMAP_ARCHIVE_2026-05-11.md  SOURCE_INFERENCE_AND_LAUNDERING.md  VALIDATED_PRIMITIVES_LEDGER.md  VALIDATION_ROADMAP_EXECUTION.md  trace-memory-architecture.md
docs/historical/: pyproject.trace-memory-architecture.toml  pyproject.trace-memory.toml  trace-memory-PRD.md
paper/: Source_Downgrading.tex
(+161 files in other folders)
