[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "source-downgrading-artifact"
version = "0.1.0"
description = "Standalone Source Downgrading paper artifact, validation code, benchmarks, and committed results."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Diego Falkowski Carboni", email = "diego@tyxter.dev" },
]
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
embeddings = [
    "sentence-transformers>=2.2",
]
llm = [
    "anthropic>=0.20",
    "openai>=1.0",
    "python-dotenv>=1.0",
]
source-classifier = [
    "torch>=2.1",
    "transformers>=4.40",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
    "mypy>=1.0",
]
all = [
    "sentence-transformers>=2.2",
    "anthropic>=0.20",
    "openai>=1.0",
    "python-dotenv>=1.0",
    "torch>=2.1",
    "transformers>=4.40",
    "pytest>=7.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "live: tests that hit live LLM providers or network services",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

